22/7/2024
- Fixed Cooked Dinosaur Meat Recipes
- Added Pachycephalosaurus
- Added Pachycephalosaurus DNA
- Added Pachycephalosaurus Egg
- Added Raw Pachycephalosaurus Meat
- Added Cooked Pachycephalosaurus Meat
21/7/2024 B
- Fixed Summoning Entities
- Fixed Entity Data
21/7/2024 A
- Fixed Academy Crash (#6)
- Fixed Structures Not Spawning
17/7/2024
- Updated to 1.21
13/7/2024
- Updated to 1.20.6
8/7/2024
- Skull Blocks Can Now Be Worn Like Pumpkins
- Archaeology Workbench Now Has Different Bottom Texture
- Academy Now Generates With Lime Cultivator
- Changed Romantic Concoction Recipe -> No Longer Duplicates Glass Bottles
- Cleaned Up Fossils Legacy Textures
- Added Bucket of Raw Berry Medley
- Added Bucket of Cooked Berry Medley
- Added White Cultivator
- Added Orange Cultivator
- Added Magenta Cultivator
- Added Light Blue Cultivator
- Added Yellow Cultivator
- Added Lime Cultivator
- Added Pink Cultivator
- Added Gray Cultivator
- Added Light Gray Cultivator
- Added Cyan Cultivator
- Added Purple Cultivator
- Added Blue Cultivator
- Added Brown Cultivator
- Added Green Cultivator
- Added Red Cultivator
- Added Black Cultivator
- Added Raw Chicken Soup Cauldron
- Added Cooked Chicken Soup Cauldron
- Added Raw Berry Medley Cauldron
- Added Cooked Berry Medley Cauldron
- Added Brazilian Portuguese Translation (muito obrigado "Sir Pentious")
- Fixed Cultivator Recipe on Fabric
- Fixed Drum Recipe on Fabric
- Fixed Feeder Recipe on Fabric
- Fixed Making Tamed Zombified Piglin
- Fixed Server Support
- Fixed Time Machine GUI
- Updated Forge To 49.1.0
22/5/2024
- Fixed Crash
- Updated French Translation
20/5/2024
- Fixed Nautilus Duplication Glitch
- Fixed Wrong GUI Texture In Legacy Pack
- Fixed "pack.png" In Legacy Pack
- Fixed Crouching Not Spawning Babies
- Fixed Brachiosaurus Height
- Fixed Drinking Chicken Essence Bottle Not Giving Back Glass Bottle
- Added Romantic Concoction Bottle
18/5/2024
- Fixed Anu Spawning Naturally In Fabric Versions